# epaper-display

./: .gitignore  BACKLOG.md  README.md  epaper-display.ino  file.ino  global.h  main.go  net.ino  sensor.ino  sketch.json  ui.ino  wifi_secrets_TEMPLATE.h
arduino/: README.md  arduino.ino  file.ino  global.h  net.ino  sketch.json  ui.ino  wifi_secrets_TEMPLATE.h
epd4in2/: epd4in2.go
fonts/: README.md  proggy_tinysz8pt7b.go
go/: README.md  go.mod  go.sum  main.go
microcontroller/arduino/: sensor.ino  wifi_secrets_TEMPLATE.h
microcontroller/micropython/: code.py  eclocknet.py
microcontroller/rust/src/: main.rs
microcontroller/tinygo/: main.go
python/: cantarell-18.bdf  code.py  display_test.py  eclockhw.py  eclocknet.py  eclockui.py
rpi-go/: eclock  go.mod  go.sum  main.go
rpi-python/: eclock.py  net.py  storage.py  ui.py
rpi/go/: .gitignore  build_and_deploy.sh  go.sum
rpi/python/: README.md  eclock.py  net.py  requirements.txt  ui.py
rpi/rust/: .gitignore  Cargo.toml
rpi/rust/.cargo/: config
rpi/rust/assets/: secrets.txt.example
rpi/rust/src/: air_quality.rs  finance.rs  main.rs  weather.rs
rust/: Cargo.toml  build.rs
rust/src/: main.rs  ui.rs
v1/: README.md  go.mod  go.sum  main.go
v1-golang/: main.go
v1-golang/fonts/: tinyfont.go
v1/python/: code.py
