[package]
name = "eclock"
version = "0.1.0"
authors = ["Tim Boldt <tim.boldt@gmail.com>"]
description = "epaper clock"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2.3"
nb = "1.0.0"
embedded-graphics = "0.6.2"
feather_m0 = "0.7.0"
ssd1306 = "0.3.1"
shared-bus = "0.2.0"
ds323x = "0.3.1"

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[dependencies.atsamd-hal]
version = "~0.9"
default-features = false

[dependencies.panic-abort]
version = "~0.3"
optional = true

[dependencies.panic-halt]
version = "0.2.0"
optional = true

[dependencies.panic-semihosting]
version = "~0.5"
optional = true

[dependencies.panic_rtt]
version = "~0.1"
optional = true

[dependencies.usb-device]
version = "~0.2"
optional = true

[dependencies.usbd-serial]
version = "~0.1"
optional = true

[features]
# ask the HAL to enable atsamd21g18a support
default = ["rt", "atsamd-hal/samd21g18a", "panic_halt"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g18a-rt"]
unproven = ["atsamd-hal/unproven"]
use_rtt = ["atsamd-hal/use_rtt", "panic_rtt"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
panic_halt = ["panic-halt"]
panic_abort = ["panic-abort"]
panic_semihosting = ["panic-semihosting"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"

[[bin]]
name = "eclock"
test = false
bench = false
