[package]
name = "eclock"
version = "0.1.0"
authors = ["Tim Boldt <tim.boldt@gmail.com>"]
description = "epaper clock"

[dependencies]
arraystring = { version = "0.3.0", default-features = false }
atsamd-hal = { version = "~0.9", default-features = false }
cortex-m = "~0.6"
cortex-m-rt = "~0.6.12"
ds323x = "0.3.1"
embedded-graphics = "0.6.2"
embedded-hal = { version = "~0.2.3", features = ["unproven"] }
epd-waveshare = "0.4.0"
feather_m0 = { version = "0.7.0", features = ["unproven", "usb"] }
nb = "1.0.0"
panic-halt = "0.2.0"
profont = "0.4.0"
shared-bus = "0.2.0"
usb-device = "~0.2"
usbd-serial =  "0.1.0"
wifi-nina = "0.1.2"

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"

[[bin]]
name = "eclock"
test = false
bench = false
