[package]
name = "epaper-clock"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
#reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
